language/move-lang/tests/move_check/borrows/dereference_field_invalid.exp
error: 

    ┌── tests/move_check/borrows/dereference_field_invalid.move:11:17 ───
    │
 11 │         let f = &mut s.f;
    │                 -------- Field 'f' is still being mutably borrowed by this reference
 12 │         *s;
    │         ^^ Invalid dereference.
    │

error: 

    ┌── tests/move_check/borrows/dereference_field_invalid.move:15:17 ───
    │
 15 │         let f = id_mut(&mut s.f);
    │                 ---------------- Field 'f' is still being mutably borrowed by this reference
 16 │         *s;
    │         ^^ Invalid dereference.
    │

